tests/baselines/reference/superCallBeforeThisAccessing5(strict=true).errors.txt
superCallBeforeThisAccessing5.ts(2,13): error TS7008: Member '_t' implicitly has an 'any' type.


==== superCallBeforeThisAccessing5.ts (1 errors) ====
    class D extends null {
        private _t;
                ~~
!!! error TS7008: Member '_t' implicitly has an 'any' type.
        constructor() {
            this._t;  // No error
        }
    }
    